--- a/users_manager/templates/users_manager/user_data.html
+++ b/users_manager/templates/users_manager/user_data.html
@@ -43,7 +43,7 @@
 
 
 				<footer>
-                    <a class="button" href="{% url 'users_manager:edit_user_data' user.id %}" style="background-color: green;">Edit</a>
+                    <a class="button" href="{% url 'users_manager:edit_user_data' user.id %}" style="background-color: green;">Edit data</a>
                     <a class="button" href="{% url 'users_manager:password_change' %}" style="background-color: green;">Password change</a>
                 </footer>
 			</form>
