--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -1,10 +1,20 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
     <link rel="icon" type="image/png" href="{% static 'images/icons/home.ico' %}"/>
+    <style>
+        a { font-size: 20px!important;}
+        .button {
+            font-size: 25px!important;
+            font-weight: bold!important;
+        }
+    </style>
 
 </head>
 <body class="bg-study">
@@ -19,8 +29,8 @@
                     {% if user.is_authenticated %}
                         <fieldset>
                             Welcome, {{ user.username }}
-                            <p><a href="{% url 'logout' %}">logout</a></p>
-                            <p><a href="{% url 'password_reset' %}">reset password</a></p>
+                            <p><a href="{% url 'logout' %}">Log out</a></p>
+                            <p><a href="{% url 'password_reset' %}">Reset password</a></p>
                             <p><a href="{% url 'users_manager:user_data' %}">User data</a>
                         </fieldset>
             <fieldset>
@@ -38,7 +48,7 @@
                 </div>
                  <div class="row">
                     <div class="col span4">
-                        <p><a class="button left" href="{% url 'micro_content_manager:micro_content_search' 1 %}">Search micro contents</a></p>
+                        <p><a class="button left" href="{% url 'micro_content_manager:micro_content_search' 1 %}">Search micro content</a></p>
                     </div>
                 </div>
             </div>
@@ -58,3 +68,5 @@
     </div>
 
 </body>
+
+</html>
