--- a/users_manager/templates/registration/password_reset_form.html
+++ b/users_manager/templates/registration/password_reset_form.html
@@ -53,7 +53,7 @@
 				<footer>
 
 					<button type="submit" class="button" style="background-color: green;">Send me instructions</button>
-                     <a id="id_back_button" class="button" onclick="window.history.back();" >Back</a>
+                     <a id="id_back_button" class="button" href="{% url 'micro_content_manager:menu' %}" >Back</a>
 				</footer>
 			</form>
 
