--- a/users_manager/templates/users_manager/user_data.html
+++ b/users_manager/templates/users_manager/user_data.html
@@ -17,7 +17,7 @@
 
 			<form method="post" class="sky-form">
                 {% csrf_token %}
-				<header>User data<a id="id_back_button" class="button" onclick="window.history.back();">Back</a></header>
+				<header>User data<a id="id_back_button" class="button" href="{% url 'micro_content_manager:menu' %}">Home</a></header>
 				<fieldset>
                     {{ form.errors }}
 					<section>
