--- a/micro_content_manager/templates/micro_content_manager/create_selection.html
+++ b/micro_content_manager/templates/micro_content_manager/create_selection.html
@@ -5,6 +5,11 @@
         -moz-box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.45);
         box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.45);
     }
+    #back_button{
+        margin: 100px 87px 0px 0px;
+        text-align: center;
+        font-size: 15px!important;
+    }
 </style>
 <!DOCTYPE html>
 <html lang="en">
@@ -94,7 +99,9 @@
                                                     <h5 id="option2" class="button option" style="background-color: #2da5da!important; margin-right: 8px!important;">1 Video 5 Questions</h5>
                                                     <h5 id="option3" class="button option" style="background-color: #2da5da!important;">2 Videos 5 Questions</h5>
                                                     <h5 id="option4" class="button " style="background-color: #2da5da!important;">2 Videos 7 Questions</h5>
+                                                    <a id="back_button" class="button" href="{% url 'micro_content_manager:menu' %}" style="font-size: 22px!important; background-color: rebeccapurple">Home</a>
                                 </div>
+
                             </div>
                             <div id="div2" class="col span9">
                                 <section>
