--- a/micro_content_manager/templates/micro_content_manager/mc_search.html
+++ b/micro_content_manager/templates/micro_content_manager/mc_search.html
@@ -54,7 +54,8 @@
                                         <div class="col span4">
                                             <a href="{% url 'micro_content_manager:micro_content_search' 2 %}" class="button"  style="margin-left: 0px!important; color: white!important;">All Micro Content</a>
                                         </div>
-                          </div>
+                                        <a id="" class="button" href="{% url 'micro_content_manager:menu' %}" style="margin-left: 100px!important; font-size: 20px; background-color:rebeccapurple">Home</a>
+                                </div>
                           </div>
                             <br><br>
                             <div class="row">
