--- a/micro_content_manager/templates/micro_content_manager/store.html
+++ b/micro_content_manager/templates/micro_content_manager/store.html
@@ -25,7 +25,7 @@
                         <div class="row">
                             <div class="col span4">
                                <section>           {#  1 sent as a parameter to go back to the search page with 'My micro content' selected  #}
-                                    <a href="{% url 'micro_content_manager:micro_content_search' 1 %}" class="button" style="margin-left: 0px!important; color: white!important;">Go to search page</a>
+                                    <a href="{% url 'micro_content_manager:menu' %}" class="button" style="margin-left: 0px!important; color: white!important;">Home</a>
                                 </section>
                             </div>
                         </div>
